Add React ToDoList app

--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 
-  <head>
-    <link href="style.css" rel="stylesheet"/>
+   <head>
+      <meta charset="UTF-8">
+      <title>React App</title>
+   </head>
 
-  </head>
-
-  <body>
-
-    <div class="container">
-      
-      <input type="text" placeholder="User name" id="userName" />
-      <input type="button" value="Search" id="search" />
-
-
-    </div>
-
-    <script src="func.js"></script>
-  </body>
-
+   <body>
+      <div id="root"></div>
+      <script src="/bundle.js"></script>
+   </body>
 
 </html>
